fix: word-break added to prevent comment/reply horizontal overflow

--- a/src/app/comment-timeline/_shared/components/comment-reply-template/comment-reply-template.component.scss
+++ b/src/app/comment-timeline/_shared/components/comment-reply-template/comment-reply-template.component.scss
@@ -17,6 +17,7 @@
 
 .comment_text {
   width: 100%;
+  word-break: break-word;
 }
 
 .editable_container {
